# BOSSKernelBenchmarks

./: .gitignore  CMakeLists.txt  generate_tpch_data.sh
Benchmarks/: BOSSBenchmarks.cpp  ITTNotifySupport.hpp  config.hpp  convertToCsv.py  dataGeneration.cpp  select.cpp  tpch.cpp  utilities.cpp
